# py-pyside-xml

./: README.md  br.com.justcode.Qt.json  pyproject.toml
src/: tools.py
src/app/: main.py
src/app/ui/: MainWindow.py  __init__.py
src/app/uic/: Ui_MainWindow.py  resources_rc.py
src/resources/: br.com.justcode.Qt.desktop  resources.qrc
src/resources/locales/: br.com.justcode.Qt.pt_BR.qm  br.com.justcode.Qt.pt_BR.ts
src/resources/ui/: MainWindow.ui
